scraper-scheduler.log
nohup: ignoring input
Debugger listening on ws://127.0.0.1:43785/d00245a5-1856-406d-8451-1b25fefd47ae
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
Waiting for the debugger to disconnect...
/home/boot/Desktop/external_BBP_db/scraper-master.js:139
                        icon: p.thumbnail ? .url,
                                            ^

SyntaxError: Unexpected token '.'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/boot/Desktop/external_BBP_db/scraper-scheduler.js:2:24)

Node.js v22.22.0
